--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="stylesheet" href="/estilos/style.css">
     <link rel="icon" type="image/png" href="/imagens/iconeLogo.png">
@@ -37,8 +37,9 @@
             <p>A curiosidade me levava a desmontar equipamentos e até mesmo interromper serviços, como o da linha
                 telefônica de minha mãe. Com o tempo, percebi que, para transformar essa curiosidade em construção de
                 soluções, seria necessário compreender o funcionamento de cada tecnologia.
-                Desde então, tenho buscado constantemente novos aprendizados. Com qual resultado? Hoje como Analista de
-                TI, contribuo para o mundo com Desenvolvimento Full-Stack, Banco de Dados e suas Ferramentas e Infraestrutura.</p>
+                Desde então, tenho buscado constantemente novos aprendizados. Com qual resultado? Busco evoluir e
+                contribuir para o mundo com Desenvolvimento Full-Stack, Banco de Dados e suas Ferramentas e
+                Infraestrutura.</p>
 
             <div id="social">
                 <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
