--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <!--Touchbar-->
-        <img class="touchbar" src="/imagens/logoPortifolio.svg">
+        <img class="touchbar" src="imagens/logoPortifolio.svg">
 
         <button class="botao"><i class="fa-solid fa-bars"></i></button>
 
