--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
         <section id="sobremim">
-            <img class="foto-perfil" src="/imagens/perfil.png" alt="foto de Arthur Figueiredo">
+            <img class="foto-perfil" src="imagens/perfil.png" alt="foto de Arthur Figueiredo">
             <h1>Arthur Figueiredo</h1>
             <p>Nascido em 2006, apaixonado por tecnologia desde 2013.</p>
             <p>A curiosidade me levava a desmontar equipamentos e até mesmo interromper serviços, como o da linha
