--- a/index.html
+++ b/index.html
@@ -14,19 +14,55 @@
 <body>
     <header>
         <!--Touchbar-->
-        <img class="touchbar" src="imagens/logoPortifolio.svg">
+            <div class="menu">
+            <img class="touchbar" src="imagens/logoPortifolio.svg">
+            <button class="botao">
+                <svg height="18" width="18">
+                    <path fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                        stroke-linejoin="round" class="globalnav-menutrigger-bread globalnav-menutrigger-bread-bottom"
+                        d="M2 12h14">
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="2 12, 16 12; 2 9, 16 9; 3.5 15, 15 3.5" />
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="3.5 15, 15 3.5; 2 9, 16 9; 2 12, 16 12" />
+                    </path>
+                    <path fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                        stroke-linejoin="round" class="globalnav-menutrigger-bread globalnav-menutrigger-bread-bottom"
+                        d="M2 12h14">
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="2 12, 16 12; 2 9, 16 9; 3.5 15, 15 3.5" />
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="3.5 15, 15 3.5; 2 9, 16 9; 2 12, 16 12" />
+                    </path>
+                    <path fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"
+                        stroke-linejoin="round" class="globalnav-menutrigger-bread globalnav-menutrigger-bread-top"
+                        d="M2 5h14">
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="2 5, 16 5; 2 9, 16 9; 3.5 3.5, 15 15" />
+                        <animate attributeName="points" keyTimes="0;0.5;1" dur="0.24s" begin="indefinite" fill="freeze"
+                            calcMode="spline" keySplines="0.42, 0, 1, 1;0, 0, 0.58, 1"
+                            values="3.5 3.5, 15 15; 2 9, 16 9; 2 5, 16 5" />
+                    </path>
+                </svg>
+            </button>
+            </div>
+       
 
-        <button class="botao"><i class="fa-solid fa-bars"></i></button>
-
-        <nav>
-            <ul>
-                <li><a href="#sobremim">Sobre Mim</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#formacao">Formação</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
+            <nav class="navegacao">
+                <ul>
+                    <li><a href="#sobremim">Sobre Mim</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#formacao">Formação</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        
     </header>
 
     <main>
@@ -42,10 +78,10 @@
                 Infraestrutura.</p>
 
             <div id="social">
-                <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="www.linkedin.com/in/arthur-figueiredo-a26889285"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/arthurdsfigueiredo"><i class="fa-brands fa-github"></i></a>
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-solid fa-at"></i></a>
+                <a href="mailto: arthursfigueiredo2017@gmail.com"><i class="fa-solid fa-at"></i></a>
             </div>
         </section>
 
